--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,5 +23,8 @@
     "title": "Unlock the full power of",
     "linkYoCard": "LINK YOUR CARD",
     "errorFetch": "An error occurred while loading data."
+  },
+  "menu": {
+    "title": "Explorar Cupones Instantáneos"
   }
 }
