--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -23,5 +23,8 @@
     "title": "Desbloquea todo el poder de",
     "linkYoCard": "VINCULA TU TARJETA",
     "errorFetch": "Se ha producido un error al cargar datos."
+  },
+  "menu": {
+    "title": "Explorer Instant Coupons"
   }
 }
