Se agrega lenaguaje e home

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,5 +26,9 @@
   },
   "menu": {
     "title": "Explorar Cupones Instantáneos"
+  },
+  "home": {
+    "title": "Link your business card to unlock cashback offers",
+    "linkYoCard": "LINK YOUR CARD"
   }
 }
