--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -26,5 +26,9 @@
   },
   "menu": {
     "title": "Explorer Instant Coupons"
+  },
+  "home": {
+    "title": "Vincula tu tarjeta de empresa para desbloquear bonificaciones",
+    "linkYoCard": "VINCULA TU TARJETA"
   }
 }
