Se agrega lenguaje a componete detalle

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -30,5 +30,10 @@
   "home": {
     "title": "Link your business card to unlock cashback offers",
     "linkYoCard": "LINK YOUR CARD"
+  },
+  "detail": {
+    "badgeCashback": "Cashback",
+    "badgeCoupon": "Instant Coupon",
+    "btnCoupon": "Get Coupon"
   }
 }
