--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -25,10 +25,15 @@
     "errorFetch": "Se ha producido un error al cargar datos."
   },
   "menu": {
-    "title": "Explorer Instant Coupons"
+    "title": "Explorar Cupones Instantáneos"
   },
   "home": {
     "title": "Vincula tu tarjeta de empresa para desbloquear bonificaciones",
     "linkYoCard": "VINCULA TU TARJETA"
+  },
+  "detail": {
+    "badgeCashback": "Bonificación",
+    "badgeCoupon": "Cupón Instantáneo",
+    "btnCoupon": "Obtener Cupón"
   }
 }
