Se crea diccionario y catalogo para tabla

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,5 +54,9 @@
 
     "login-login-error": "Login error",
     "login-register-error": "Registration error"
+  },
+  "tabla": {
+    "tabla-noYoLink": "No card linking required",
+    "tabla-yoLink": "Link your card to get"
   }
 }
